Adds the required fonts in src/fonts folder and imports them in App.scss

--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -1,3 +1,18 @@
-.app {
+@font-face {
+  font-family: CinzelDecorative;
+  src: url('../fonts/CinzelDecorative.ttf');
+}
+  
+@font-face {
+  font-family: NotoSans;
+  src: url('../fonts/NotoSans-Regular.ttf');
+}
+
+body {
+  margin: 0;
+  font-family: NotoSans;
+}
+
+* {
   box-sizing: border-box;
 }
