--- a/src/sass/Header.scss
+++ b/src/sass/Header.scss
@@ -1,2 +1,62 @@
+$button-width: 160px;
+$button-height: 50px;
+$login-shrink: 20;
+
 .header {
+  display: inline-flex;
+  background-color: #5543D2;
+  height: 100px;
+  width: 100%;
+  padding: 10px calc(15% + 10px);
+  justify-content: space-between;
+
+  img {
+    height: 80px;
+  }
+
+  nav {
+    position: relative;
+    display: inline-flex;
+    height: $button-height;
+    align-self: center;
+
+    span {
+      position: absolute;
+      background-color: white;
+      height: 100%;
+      left: $button-height / 2;
+      right: $button-height / 2;
+    }
+
+    a {
+      display: flex;
+      flex-flow: column nowrap;
+
+      font-size: 1rem;
+      height: 100%;
+      width: $button-width;
+      padding: 0 $button-height / 2;
+
+      justify-content: center;
+      z-index: 2;
+      
+      background-color: #7E7EFF;
+      color: white;
+
+      &:not(:last-child) {
+        border-top-left-radius: $button-height;
+        border-bottom-left-radius: $button-height;
+        text-align: left;
+        clip-path: polygon(0 0, 100% - $login-shrink 0%, 75% - $login-shrink 100%, 0% 100%);
+        margin-right: -((25 + $login-shrink) * $button-width / 100) + 2;
+      }
+
+      &:last-child {
+        border-top-right-radius: $button-height;
+        border-bottom-right-radius: $button-height;
+        text-align: right;
+        clip-path: polygon(25% 0, 100% 0%, 100% 100%, 0% 100%);
+      }
+    }
+  }
 }
