Creates Consts file, adds home background image and creates .into scss
- Consts.scss will store the scss consts

- Implements some default scss in App.scss

- Implements the .intro section style

--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -8,11 +8,30 @@
   src: url('../fonts/NotoSans-Regular.ttf');
 }
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: NotoSans;
 }
 
-* {
-  box-sizing: border-box;
+section {
+  display: flex;
+}
+
+h1, h2, h3, h4 {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+
+  &::after {
+    content: " ";
+    display: block;
+    background-color: #252525;
+    width: 140px;
+    height: 3px;
+    align-self: inherit;
+  }
 }
