--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -19,6 +19,9 @@ body {
 
 section {
   display: flex;
+  flex-direction: column;
+
+  padding: 60px 15%;
 }
 
 h1, h2, h3, h4 {
@@ -32,6 +35,8 @@ h1, h2, h3, h4 {
     background-color: #252525;
     width: 140px;
     height: 3px;
+    margin-top: 4px;
+    margin-bottom: 20px;
     align-self: inherit;
   }
 }
