--- a/src/sass/Home.scss
+++ b/src/sass/Home.scss
@@ -1,13 +1,17 @@
 @import './Consts.scss';
 
 .home {
+  h2 {
+    font-size: 2.2rem;
+    font-weight: bold;
+    align-self: center;
+  }
+
   .intro {
     background: url('../imgs/homeBackground.jpg') no-repeat;
     background-position: center 0;
     background-size: cover;
 
-    display: flex;
-    flex-flow: column nowrap;
     justify-content: center;
     height: calc(100vh - #{$header-height});
     color: white;
@@ -25,11 +29,24 @@
     }
 
     blockquote {
-      margin: 20px 36%;
+      margin: 0 26%;
       text-align: right;
 
       p {
         text-align: center;
+      }
+    }
+  }
+
+  .features {
+    & > div {
+      display: inline-flex;
+      margin-top: 20px;
+
+      .feature {
+        margin: 0 10px;
+        flex-basis: 0;
+        flex-grow: 1;
       }
     }
   }
