Finishes the home/footer styling the social media and footer components

--- a/src/sass/Button.scss
+++ b/src/sass/Button.scss
@@ -15,7 +15,7 @@
   color: $purple-3;
   user-select: none;
 
-  transition: color 0.4s, background-color 0.4s;
+  transition: color 0.4s, background-color 0.4s, border 0.4s;
 
   &:hover {
     background-color: $purple-3;
