--- a/src/sass/Footer.scss
+++ b/src/sass/Footer.scss
@@ -1,3 +1,8 @@
 .footer {
-    
+  display: inline-flex;
+  justify-content: space-between;
+  align-items: center;
+
+  width: 100%;
+  padding: 0 calc(15% + 10px);
 }
