--- a/src/sass/About.scss
+++ b/src/sass/About.scss
@@ -1,3 +1,50 @@
-.sobre {
-    
+@import './Consts';
+
+.about {
+  h2 {
+    color: $purple-2;
+    margin-left: 10px;
+
+    &::after {
+      background-color: $purple-2;
+    }
+  }
+
+  section.problem {
+    h1 {
+      align-self: center;
+      text-align: center;
+      font-size: 2.2rem;
+
+      &::after {
+        margin-bottom: 40px;
+      } 
+    }
+  
+    h2 {
+      &::after {
+        margin-bottom: 20px;
+      }
+    }
+
+    & > div {
+      display: inline-flex;
+
+      & > div {
+        padding: 0 10px;
+
+        img {
+          width: 100%;
+        }
+
+        p:first-child {
+          margin-top: 0;
+        }
+      }
+    }
+  }
+
+  section.differentials {
+    background-color: #fafafa;
+  }
 }
