--- a/src/sass/Differential.scss
+++ b/src/sass/Differential.scss
@@ -1,3 +1,26 @@
 .differential {
-    
+  display: inline-flex;
+  margin-bottom: 30px;
+
+  & > div {
+    flex: 1;
+    padding: 10px;
+
+    img {
+      display: block;
+      width: 100%;
+      height: 250px;
+      object-fit: cover;
+    }
+
+    p {
+      margin: 0;
+    }
+  }
+
+  & > div:first-child {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
 }
