--- a/src/sass/Button.scss
+++ b/src/sass/Button.scss
@@ -14,6 +14,7 @@
   background-color: transparent;
   color: $purple-3;
   user-select: none;
+  text-decoration: none;
 
   transition: color 0.4s, background-color 0.4s, border 0.4s;
 
