--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -1,3 +1,5 @@
+@import './Consts';
+
 @font-face {
   font-family: CinzelDecorative;
   src: url('../fonts/CinzelDecorative.ttf');
@@ -29,6 +31,7 @@ h1, h2, h3, h4 {
   display: flex;
   flex-direction: column;
   margin: 0;
+  font-weight: normal;
 
   &::after {
     content: " ";
@@ -49,4 +52,27 @@ h1, h2, h3, h4 {
 
 .shadow {
   box-shadow: 0 0 4px rgba(0,0,0,0.4);
+}
+
+p.divider {
+  position: relative;
+  display: inline-flex;
+  justify-content: center;
+  width: 100%;
+
+  &::before, &::after {
+    content: " ";
+    align-self: center;
+    height: 3px;
+    background-color: $purple-3;
+    flex-grow: 1;
+  }
+
+  &::before {
+    margin-right: 10px;
+  }
+
+  &::after {
+    margin-left: 10px;
+  }
 }
