--- a/src/sass/SocialMedias.scss
+++ b/src/sass/SocialMedias.scss
@@ -11,6 +11,7 @@
     img {
       height: 30px;
       width: 30px;
+      filter: saturate(0) brightness(.45);
       transition: filter 0.4s;
     }
   }
@@ -25,5 +26,24 @@
 
   .button:not(:last-child) {
     margin: 0 20px;
+  }
+
+  &.inverse {
+    .button {
+      border: 3px solid white;
+      transition: background-color 0.4s;
+
+      img {
+        filter: brightness(0) invert(1);
+      }
+    }
+  
+    .button:hover {
+      background-color: white;
+  
+      img {
+        filter: none;
+      }
+    }
   }
 }
