Adds a new color to use in button-filled hover

--- a/src/sass/Button.scss
+++ b/src/sass/Button.scss
@@ -27,5 +27,9 @@
     border: none;
     background-color: $purple-1;
     color: white;
+
+    &:hover {
+      background-color: $purple-4;
+    }
   }
 }
