Fixes the Login page style
- Sets the min height to cover all page

- Removes the input's outline

- Sets the width of all section to cover all page

--- a/src/sass/Input.scss
+++ b/src/sass/Input.scss
@@ -11,6 +11,10 @@
     font-size: 0.8rem;
   }
 
+  input, textarea {
+    outline: none;
+  }
+
   input:not([type=submit]), textarea {
     height: 2.5rem;
     width: 100%;
