--- a/src/sass/Login.scss
+++ b/src/sass/Login.scss
@@ -1,15 +1,17 @@
+@import './Consts';
+
 .login {
   section {
+    min-height: calc(100vh - #{$header-height + $footer-height});
     display: inline-flex;
     flex-direction: row;
 
     & > div {
-      margin: 0 10px;
       flex: 1;
     }
 
     & > div:first-child {
-      margin-right: calc(100% / 6 + 40px);
+      margin: 0 calc(100% / 6 + 40px) 0 10px;
     }
 
     div:not(.userSocialMedias) > .button {
