Generalzies the login and signup styles and implements Signup page
- Login.scss and Register.scss have the same content, so they are now in Entry.scss

- Updates the filters in UserSocialMedias and Social medias to have a nicelier transition

- Adds type="password" in the password fields

--- a/src/sass/Entry.scss
+++ b/src/sass/Entry.scss
@@ -1,6 +1,6 @@
 @import './Consts';
 
-.login {
+.login, .signup {
   section {
     min-height: calc(100vh - #{$header-height + $footer-height});
     display: inline-flex;
