--- a/src/sass/SocialMedias.scss
+++ b/src/sass/SocialMedias.scss
@@ -20,7 +20,7 @@
     border: 3px solid $purple-3;;
 
     img {
-      filter: brightness(0) invert(1);
+      filter: saturate(0) brightness(4);
     }
   }
 
@@ -34,7 +34,7 @@
       transition: background-color 0.4s;
 
       img {
-        filter: brightness(0) invert(1);
+        filter: saturate(0) brightness(4);
       }
     }
   
