--- a/src/sass/UserHeader.scss
+++ b/src/sass/UserHeader.scss
@@ -1,3 +1,82 @@
+@import './Consts';
+
 .userHeader {
-    
+  display: inline-flex;
+  background-color: $purple-3;
+  height: $header-height;
+  width: 100%;
+  padding: 10px 10px 10px calc(15% + 10px);
+  justify-content: space-between;
+
+  img {
+    height: 80px;
+  }
+
+  & > div {
+    display: inline-flex;
+
+    .button {
+      border: 2px solid white;
+      background-color: $purple-3;
+
+      img {
+        transition: filter 0.4s;
+      }
+
+      &:hover {
+        background-color: white;
+
+        img {
+          filter: none;
+        }
+      }
+    }
+
+    & > .button {
+      padding: 10px;
+      height: $header-height - 50px;
+      width: $header-height - 50px;
+
+      img {
+        height: auto;
+        filter: saturate(0) brightness(4);
+      }
+    }
+
+    & > span {
+      width: 1px;
+      margin: 6px 20px;
+      background-color: white;
+    }
+
+    .name {
+      color: white;
+      font-size: 2rem;
+      margin-right: 10px;
+      align-self: center;
+    }
+
+    div {
+      position: relative;
+
+      img {
+        border-radius: 100%;
+        padding: 6px 0;
+      }
+
+      .button {
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        width: 25px;
+        height: 25px;
+        padding: 3px;
+
+        img {
+          height: auto;
+          filter: saturate(0) brightness(4);
+        }
+      }
+    }
+  }
 }
