Generalizes the Entry.css again
- Changes Entry.scss to FormPages.scss

- Implements the Contact page

- Changes some styles in Button, SocialMedias and Input components

--- a/src/sass/FormPages.scss
+++ b/src/sass/FormPages.scss
@@ -1,6 +1,6 @@
 @import './Consts';
 
-.login, .signup {
+.login, .signup, .contact {
   section {
     min-height: calc(100vh - #{$header-height + $footer-height});
     display: inline-flex;
