--- a/src/sass/Button.scss
+++ b/src/sass/Button.scss
@@ -15,6 +15,7 @@
   color: $purple-3;
   user-select: none;
   text-decoration: none;
+  cursor: pointer;
 
   transition: color 0.4s, background-color 0.4s, border 0.4s;
 
