--- a/src/sass/Settings.scss
+++ b/src/sass/Settings.scss
@@ -1,3 +1,81 @@
+@import './Consts';
+
 .settings {
-    
+  section {
+    align-items: center;
+    width: 450px;
+    box-sizing: content-box;
+    margin: 0 auto;
+    padding-top: 20px;
+  }
+
+  h1 {
+    font-size: 2.2rem;
+    font-weight: bold;
+    margin-bottom: 40px;
+
+    &::after {
+      content: none;
+    }
+  }
+
+  .avatar {
+    position: relative;
+    width: 250px;
+    height: 250px;
+    border-radius: 100%;
+    box-shadow: 0px 0px 20px 0px $purple-3 inset,
+                0px 0px 20px 0px $purple-3 inset, 
+                0px 0px 20px 0px $purple-3 inset, 
+                0px 0px 4px 0px $purple-3;
+
+    img {
+      height: inherit;
+      padding: inherit;
+    }
+
+    & > img {
+      border-radius: 100%;
+      border: 3px solid $purple-3;
+    }
+
+    .button {
+      position: absolute;
+      right: 15px;
+      bottom: 0;
+      width: 60px;
+      height: 60px;
+      padding: 20px;
+      background-color: white;
+
+      img {
+        transition: filter 0.4s;
+      }
+
+      &:hover {
+        background-color: $purple-3;
+
+        img {
+          filter: saturate(0) brightness(4);
+        }
+      }
+    }
+  }
+
+  .userSocialMedias {
+    margin-bottom: 20px;                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
+  }
+
+  .options {
+    display: flex;
+    width: 100%;
+
+    .button {
+      flex: 1;
+
+      &:last-child {
+        margin-left: 20px;
+      }
+    }
+  }
 }
