Fixes some issues in settings
- Adds the underline in the settings section title

- Adds the capability to add more classes to Button component

--- a/src/sass/Settings.scss
+++ b/src/sass/Settings.scss
@@ -12,10 +12,10 @@
   h1 {
     font-size: 2.2rem;
     font-weight: bold;
-    margin-bottom: 40px;
+    align-self: center;
 
     &::after {
-      content: none;
+      margin-bottom: 40px;
     }
   }
 
