--- a/src/sass/AboutCourse.scss
+++ b/src/sass/AboutCourse.scss
@@ -1,3 +1,26 @@
 .aboutCourse {
+  section.intro {
+    padding: 40px 0 0 0;
+
+    h1 {
+      font-size: 2.2rem;
+      text-align: center;
+      align-self: center;
+
+      &::after {
+        margin-bottom: 40px;
+      }
+    }
     
+    img {
+      width: 100%;
+      height: 500px;
+      object-fit: cover;
+    }
+  }
+
+  section.cards {
+    display: inline-flex;
+    flex-direction: row;
+  }
 }
