Implements the CourseCard component and finishes the AboutCourse page

--- a/src/sass/AboutCourse.scss
+++ b/src/sass/AboutCourse.scss
@@ -19,8 +19,12 @@
     }
   }
 
-  section.cards {
+  div.cards {
     display: inline-flex;
     flex-direction: row;
+
+    .courseCard {
+      margin: 20px 10px;
+    }
   }
 }
