--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -26,6 +26,30 @@ section {
 
   width: 100%;
   padding: 60px 15%;
+
+  &.info {
+    padding-top: 40px;
+    padding-bottom: 0;
+
+    h1 {
+      font-size: 2.2rem;
+      font-weight: bold;
+      align-self: center;
+
+      &::after {
+        margin-bottom: 10px;
+      }
+    }
+
+    p {
+      color: #4c4c4c;
+      font-style: italic;
+      width: 500px;
+      text-align: center;
+      align-self: center;
+      margin: 0;
+    }
+  }
 }
 
 h1, h2, h3, h4 {
