--- a/src/sass/Message.scss
+++ b/src/sass/Message.scss
@@ -1,3 +1,81 @@
+@import './Consts';
+
 .message {
+  display: inline-flex;
+
+  .userProfile {
+    flex: 2;
+    margin-right: 10px;
+
+    .avatar {
+      position: relative;
+      width: 100%;
+      height: auto;
   
+      img {
+        width: 100%;
+        height: inherit;
+        padding: inherit;
+        border-radius: 100%;
+        border: 3px solid $purple-3;
+        box-shadow: 0px 0px 20px 0px $purple-3 inset,
+                    0px 0px 20px 0px $purple-3 inset, 
+                    0px 0px 20px 0px $purple-3 inset;
+      }
+  
+      span {
+        display: flex;
+        position: absolute;
+        right: 10px;
+        bottom: 8px;
+        width: 40px;
+        height: 40px;
+        border-radius: 100%;
+        background-color: white;
+        color: $purple-3;
+        border: 3px solid $purple-3;
+        justify-content: center;
+        align-items: center;
+      }
+
+      &::after {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 3px;
+        margin-top: 8px;
+        background-color: #252525;
+      }
+    }
+
+    p {
+      text-align: center;
+      margin-top: 2px;
+      margin-bottom: 0px;
+
+      &.username {
+        font-weight: bold;
+        margin-top: 10px;
+      }
+    }
+  }
+
+  .messageData {
+    flex: 8;
+    margin-left: 10px;
+
+    h1 {
+      font-weight: bold;
+
+      &::after {
+        content: none;
+      }
+    }
+
+    label {
+      font-size: 0.9rem;
+      color: #4c4c4c;
+      font-style: italic;
+    }
+  }
 }
