--- a/src/sass/Post.scss
+++ b/src/sass/Post.scss
@@ -1,3 +1,40 @@
+@import './Consts';
+
 .post {
-  
+  section {
+    flex-direction: row;
+
+    & > div {
+      margin: 0 10px;
+    }
+
+    .messages {
+      flex: 7;
+
+      & > h1 {
+        margin-top: 40px;
+        font-size: 2.2rem;
+      }
+
+      .answers .message {
+        margin-bottom: 40px;
+      }
+    }
+
+    .optionsColumn {
+      flex: 3;
+
+      .button {
+        width: 100%;
+      }
+
+      div {
+        width: 100%;
+        height: 200px;
+        border: 3px solid $purple-3;
+        margin: 20px 0;
+        cursor: pointer;
+      }
+    }
+  }
 }
