--- a/src/sass/Header.scss
+++ b/src/sass/Header.scss
@@ -1,10 +1,12 @@
+@import './Consts';
+
 $button-width: 160px;
 $button-height: 50px;
 $login-shrink: 20;
 
 .header {
   display: inline-flex;
-  background-color: #5543D2;
+  background-color: $purple-3;
   height: 100px;
   width: 100%;
   padding: 10px calc(15% + 10px);
@@ -40,8 +42,10 @@ $login-shrink: 20;
       justify-content: center;
       z-index: 2;
       
-      background-color: #7E7EFF;
+      background-color: $purple-1;
       color: white;
+      text-decoration: none;
+      transition: background-color 0.4s;
 
       &:not(:last-child) {
         border-top-left-radius: $button-height;
@@ -56,6 +60,10 @@ $login-shrink: 20;
         border-bottom-right-radius: $button-height;
         text-align: right;
         clip-path: polygon(25% 0, 100% 0%, 100% 100%, 0% 100%);
+      }
+
+      &:hover {
+        background-color: $purple-4;
       }
     }
   }
