Adds a popover package to Discover screen
- The react-popover package will be used only in the discover screen becase it's methods fits better there

--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -106,3 +106,17 @@ p.divider {
     margin-left: 10px;
   }
 }
+
+.Popover {
+  .Popover-body {
+    background-color: #fafafa;
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0.4);
+    padding: 15px;
+  }
+
+  .Popover-tip {
+    fill: #fafafa;
+    stroke: rgba(0, 0, 0, 0.2);
+    z-index: 2;
+  }
+}
