--- a/src/sass/Discover.scss
+++ b/src/sass/Discover.scss
@@ -31,18 +31,25 @@ $circle-size: 120px;
           display: inline-flex;
         }
 
-        img {
+        a {
           width: $circle-size;
           height: $circle-size;
-          border: 3px solid $purple-3;
+          background-color: $purple-3;
           border-radius: 100%;
-          object-fit: cover;
           margin-top: -4px;
-          transition: filter 0.4s;
-          cursor: pointer;
 
-          &:hover {
-            filter: brightness(120%);
+          img {
+            width: 100%;
+            height: 100%;
+            border: 3px solid $purple-3;
+            border-radius: 100%;
+            object-fit: cover;
+            transition: filter 0.4s;
+            cursor: pointer;
+
+            &:hover {
+              filter: brightness(120%);
+            }
           }
         }
       }
@@ -53,7 +60,7 @@ $circle-size: 120px;
           height: 120px;
         }
 
-        img {
+        a {
           align-self: flex-end;
         }
   
