Updates the Popover style

--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -17,6 +17,7 @@
 
 a {
   text-decoration: none;
+  color: #252525;
 }
 
 body {
@@ -104,19 +105,5 @@ p.divider {
 
   &::after {
     margin-left: 10px;
-  }
-}
-
-.Popover {
-  .Popover-body {
-    background-color: #fafafa;
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0.4);
-    padding: 15px;
-  }
-
-  .Popover-tip {
-    fill: #fafafa;
-    stroke: rgba(0, 0, 0, 0.2);
-    z-index: 2;
   }
 }
