--- a/src/sass/Discover.scss
+++ b/src/sass/Discover.scss
@@ -1,6 +1,7 @@
 @import './Consts';
 
 $circle-size: 120px;
+$path-height: 180px;
 
 .discover {
   section.professions {
@@ -27,7 +28,7 @@ $circle-size: 120px;
         display: flex;
         flex-direction: column;
 
-        & > div {
+        & > div:first-child {
           display: inline-flex;
         }
 
@@ -57,7 +58,7 @@ $circle-size: 120px;
       .profession:nth-child(even) {
         div:first-child {
           width: 100%;
-          height: 120px;
+          height: $path-height;
         }
 
         a {
@@ -70,7 +71,7 @@ $circle-size: 120px;
           width: 50%;
   
           &:last-child {
-            margin-top: 56px;
+            margin-top: $path-height / 2 - 4;
             margin-right: $circle-size / 2 - 2px;
             border-right: 4px solid $purple-3;
             border-top: 4px solid $purple-3;
@@ -89,7 +90,7 @@ $circle-size: 120px;
       .profession:nth-child(odd) {
         div:first-child {
           width: 100%;
-          height: 120px;
+          height: $path-height;
         }
   
         & > div span {
@@ -98,7 +99,7 @@ $circle-size: 120px;
           width: 50%;
   
           &:first-child {
-            margin-top: 56px;
+            margin-top: $path-height / 2 - 4;
             margin-left: $circle-size / 2 - 2px;
             border-left: 4px solid $purple-3;
             border-top: 4px solid $purple-3;
@@ -116,12 +117,39 @@ $circle-size: 120px;
 
       .profession:first-child div:first-child {
         width: 50%;
-        height: 120px;
+        height: $path-height;
 
         span:last-child {
           margin-right: 0;
         }
       }
     }
+  }
+}
+
+.Popover {
+  .Popover-body {
+    //background-color: #fafafa;
+    background-color: $purple-3;
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0.4);
+    padding: 15px;
+    color: white;
+    max-width: calc(35vw - #{$circle-size} - 30px);
+
+    h3 {
+      font-size: 1.4rem;
+
+      &::after {
+        background-color: white;
+        margin-bottom: 0;
+      }
+    }
+  }
+
+  .Popover-tip {
+    //fill: #fafafa;
+    fill: $purple-3;
+    stroke: rgba(0, 0, 0, 0.2);
+    z-index: 2;
   }
 }
