Removes more sample texts
- Removes the PostCard of AboutCourse sample text and the mechanicalEngineering and Medicine short descriptions sample text

- Fixes the ::after now showing bug in PostCard

--- a/src/sass/PostCard.scss
+++ b/src/sass/PostCard.scss
@@ -33,6 +33,7 @@
       &.title {
         font-weight: bold;
         margin: 0;
+        max-height: calc(4.5rem + 13px);
 
         &::after {
           content: " ";
