--- a/src/sass/Home.scss
+++ b/src/sass/Home.scss
@@ -12,7 +12,7 @@
     font-size: 0.9rem;
     margin: 0 auto;
     margin-bottom: 3px;
-    margin-top: 40px;
+    margin-top: 20px;
   }
 
   section.intro {
@@ -52,8 +52,6 @@
       margin-top: 20px;
 
       .feature {
-        margin: 0 10px;
-        flex-basis: 0;
         flex-grow: 1;
       }
     }
@@ -67,6 +65,10 @@
       align-content: center;
       padding: 0 10px;
 
+      div {
+        margin-bottom: 0;
+      }
+
       img {
         padding: 15px;
         border: 3px solid $purple-2;
@@ -76,6 +78,7 @@
         width: 150px;
 
         align-self: center;
+        margin: 0 auto;
       }
 
       div {
@@ -105,6 +108,7 @@
 
         h3 {
           color: $purple-2;
+          text-align: left;
 
           &::after {
             margin-bottom: 12px;
@@ -134,6 +138,24 @@
       font-size: 1.4rem;
       margin-top: 20px;
       margin-bottom: 10px;
+    }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .home {
+    section.intro {
+      height: calc(100vh - #{$header-height-sm});
+
+      blockquote {
+        margin: 0 15%;
+      }
+    }
+
+    .problem div.data img {
+      padding: 15px;
+      height: 100px;
+      width: 100px;
     }
   }
 }
