--- a/src/sass/UserSocialMedias.scss
+++ b/src/sass/UserSocialMedias.scss
@@ -2,7 +2,8 @@
 
 .userSocialMedias {
   display: inline-flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  justify-content: space-around;
   width: 100%;
   padding: 0;
   margin: 0;
@@ -13,6 +14,7 @@
     border-radius: 100%;
     padding: 10px;
     border: 3px solid $purple-3;
+    margin: 0 6px 10px 6px;
 
     img {
       height: 30px;
@@ -26,6 +28,23 @@
     
     img {
       filter: saturate(0) brightness(4);
+    }
+  }
+}
+
+@media only screen and (max-width: 992px) {
+  .userSocialMedias {
+    flex-wrap: nowrap;
+    justify-content: space-between;
+
+    .button {
+      width: 40px;
+      height: 40px;
+
+      img {
+        height: 20px;
+        width: 20px;
+      }
     }
   }
 }
