Changes button's properties
- Changes hover color of secondary buttons

- Changes the button font to Roboto-Medium

- Adds a 'noShadow' property to remove the shadows of a button

--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -10,6 +10,11 @@
   src: url('../fonts/NotoSans-Regular.ttf');
 }
 
+@font-face {
+  font-family: RobotoMedium;
+  src: url('../fonts/Roboto-Medium.ttf');
+}
+
 * {
   box-sizing: border-box;
   outline: none;
