--- a/src/sass/Home.scss
+++ b/src/sass/Home.scss
@@ -8,7 +8,7 @@
     text-align: center;
   }
 
-  section span {
+  section > span {
     color: #4c4c4c;
     font-size: 0.9rem;
     margin: 0 auto;
