--- a/src/sass/Header.scss
+++ b/src/sass/Header.scss
@@ -13,6 +13,26 @@ $login-shrink: 20;
   padding: 10px 20px;
   justify-content: space-between;
 
+  nav {
+    flex: 1;
+    align-self: center;
+
+    & > a {
+      margin: 0 10px;
+    }
+
+    &:last-child {
+      text-align: right;
+    }
+  }
+
+  & > a {
+    font-family: 'CinzelDecorative', sans-serif;
+    font-size: 3rem;
+    color: white;
+    align-self: center;
+  }
+
   .slideMenu {
     display: none;
 
